fixed alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -606,7 +606,7 @@ input:-ms-input-placeholder {
 	overflow:hidden;
 }
 .home{
-	background:url(../images/homebg.jpg) no-repeat top center;
+    background:url(../images/homebg.jpg) no-repeat top center;
 	background-size:cover;
 	
 }
@@ -798,12 +798,22 @@ blockquote {
 
 /* coerner detection section */
 
+blockquote {
+    padding: 10px 20px;
+    margin: 0 0 20px;
+    font-size: 18px;
+    border-left: 2px solid #eee;
+}
+
 .coolautumnnew{
     background:url(../images/coolautumnnew.jpg) no-repeat top center;
     background-size:cover;
 }
 .coolautumn_overlaynew{
     background: url(../images/overlay.png) repeat-y 100% 100%;
+    color: #fff;
+    padding: 190px 100px 300px 100px;
+    width: 100%;
     background-size: contain;
 }
 
@@ -815,10 +825,6 @@ blockquote {
     border-left: 0;
     max-width: 55%;
     margin-left: 206px;
-}
-
-.transformnew{
-    transform: rotate(+10deg);
 }
 
 /* Driving Home Section */
